# cdb_api

./: Cargo.toml  Dockerfile  Makefile  Makefile.toml  docker-compose.yml  sqlx-data.json
migrations/: 1_users.sql  20220829221320_schema.down.sql  20220829221320_schema.up.sql  20220829221320_user.up.sql  20220830045333_user.down.sql  20220830045333_user.up.sql  20220830050138_account.down.sql  20220830050138_account.up.sql  20220901150620_init.down.sql  20220901150620_init.up.sql  20220909051606_add_revlidate_function.down.sql  20220909051606_add_revlidate_function.up.sql
src/: auth_service.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs  opts.rs  password.rs  test_utils.rs  utils.rs
src/http/: error.rs  jwt.rs  mod.rs
src/http/handlers/: accounts.rs  mod.rs  not_found.rs  openapi.rs  users.rs
src/http/handlers/accounts/: register.rs
src/http/handlers/auth/: authorize.rs  mod.rs  revalidate.rs
src/http/handlers/users/: mod.rs  user_by_id.rs  users.rs
src/http/routes/: accounts.rs  mod.rs  users.rs
src/jwt/: auth_error.rs  auth_payload.rs  claims.rs  keys.rs  mod.rs
src/models/: auth.rs  user.rs
src/routes/: accounts.rs  mod.rs  users.rs  utils.rs
src/routes/fixtures/: users.sql
tests/: accounts.rs  auth.rs  password.rs  root.rs  users.rs
tests/fixtures/: revalidate.sql  users.sql
