[package]
name = "cdb_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
axum = { version = "0.5.15", features = ["headers"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "offline"] }
validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde"] }
tower-http = { version = "0.3.4", features = ["cors"] }
chrono = { version = "0.4.22", features = ["serde"] }
tracing = "0.1.36"
thiserror = "1.0.32"
jsonwebtoken = "8.1.1"
serde_json = "1.0.85"
serde_with = "2.0.0"
once_cell = "1.13.1"
dotenvy = "0.15.2"
regex = "1.6.0"
eyre = "0.6.8"
tower = "0.4.13"
mockall = "0.11.2"
